manifests/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-list
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-list
  template:
    metadata:
      labels:
        app: todo-list
    spec:
      containers:
        - image: okteto.dev/todo-list:1.0.0
          name: todo-list
          readinessProbe:
            periodSeconds: 1
            httpGet:
              path: /healthz
              port: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: todo-list
spec:
  type: LoadBalancer
  ports:
    - name: "todo-list"
      port: 8080
  selector:
    app: todo-list

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-list
  annotations:
    dev.okteto.com/generate-host: todo-list
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: todo-list
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
